--- a/.github/workflows/ci_v1.yml
+++ b/.github/workflows/ci_v1.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Run custom linter
         run: |
           source venv/bin/activate
-          python custom_linter.py my_app tests --max-line-length 88 --max-args 5
+          python custom_linter.py my_app tests
 
       - name: Run tests
         run: |
