--- a/.github/workflows/ci-v1.yaml
+++ b/.github/workflows/ci-v1.yaml
@@ -10,7 +10,7 @@ on:
       - main
 
 jobs:
-  lint_and_test:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -28,12 +28,7 @@ jobs:
           source venv/bin/activate
           pip install -r requirements.txt
 
-      - name: Run custom linters
-        run: |
-          source venv/bin/activate
-          python custom_linter.py my_app
-
       - name: Run tests
         run: |
           source venv/bin/activate
-          python -m pytest tests/test_main.py
+          python -m unittest tests/test_main_v1.py
