--- a/.github/workflows/ci-v2.yaml
+++ b/.github/workflows/ci-v2.yaml
@@ -4,10 +4,6 @@ on:
   push:
     branches:
       - main
-      - feature/**
-  pull_request:
-    branches:
-      - main
 
 jobs:
   test:
@@ -27,7 +23,6 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
-          pip install flake8 mypy
 
       - name: Run static code analysis with flake8
         run: |
@@ -42,4 +37,4 @@ jobs:
       - name: Run tests
         run: |
           source venv/bin/activate
-          python -m unittest discover -s tests
+          python -m unittest tests/test_main_v1.py
