--- a/.github/workflows/ci-v2.yaml
+++ b/.github/workflows/ci-v2.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Run static code analysis with flake8
         run: |
           source venv/bin/activate
-          flake8 .
+          flake8 my_app/main_v1.py
 
       - name: Run type checking with mypy
         run: |
