--- a/.github/workflows/ci-v2.yaml
+++ b/.github/workflows/ci-v2.yaml
@@ -27,12 +27,12 @@ jobs:
       - name: Run static code analysis with flake8
         run: |
           source venv/bin/activate
-          flake8 my_app/main_v1.py
+          flake8 my_app/main_v1_2.py
 
       - name: Run type checking with mypy
         run: |
           source venv/bin/activate
-          mypy .
+          mypy my_app/main_v1_2.py
 
       - name: Run tests
         run: |
