--- a/mypy.ini
+++ b/mypy.ini
@@ -1,10 +1,10 @@
 [mypy]
 python_version = 3.8
 ignore_missing_imports = True
-disallow_untyped_calls = True
-disallow_untyped_defs = True
+#disallow_untyped_calls = True
+#disallow_untyped_defs = True
 warn_return_any = True
-strict = True
+#strict = True
 check_untyped_defs = True
 show_error_codes = True
 
@@ -29,18 +29,6 @@ show_error_codes = True
 ; Descripción: Permite comprobar las funciones que no tienen anotaciones de tipo, si están presentes en el código.
 ; Uso: check_untyped_defs = True
 
-; ignore_missing_imports:
-; Descripción: Ya lo tienes configurado, pero este ajuste ignora los errores por importaciones que faltan.
-; Uso: ignore_missing_imports = True
-
-; allow_redefinition:
-; Descripción: Permite redefinir variables y funciones sin generar advertencias.
-; Uso: allow_redefinition = True
-
 ; show_error_codes:
 ; Descripción: Muestra códigos de error en los mensajes de error.
 ; Uso: show_error_codes = True
-
-; disallow_subclassing_any:
-; Descripción: Genera un error si se usa Any como una clase base para subclases.
-; Uso: disallow_subclassing_any = True
