--- a/mypy.ini
+++ b/mypy.ini
@@ -1,34 +1,4 @@
 [mypy]
-python_version = 3.8
-ignore_missing_imports = True
-#disallow_untyped_calls = True
-#disallow_untyped_defs = True
+disallow_untyped_calls = True
+disallow_untyped_defs = True
 warn_return_any = True
-#strict = True
-check_untyped_defs = True
-show_error_codes = True
-
-; disallow_untyped_calls:
-
-; Descripción: Genera un error si se llama a una función que no tiene anotaciones de tipo desde una función que sí tiene anotaciones.
-; Uso: disallow_untyped_calls = True
-
-; disallow_untyped_defs:
-; Descripción: Genera un error si una función no tiene anotaciones de tipo en su firma.
-; Uso: disallow_untyped_defs = True
-
-; warn_return_any:
-; Descripción: Genera una advertencia si se devuelve Any desde una función.
-; Uso: warn_return_any = True
-
-; strict:
-; Descripción: Activa varias comprobaciones estrictas a la vez, como disallow_untyped_calls, disallow_untyped_defs, warn_return_any, entre otras.
-; Uso: strict = True
-
-; check_untyped_defs:
-; Descripción: Permite comprobar las funciones que no tienen anotaciones de tipo, si están presentes en el código.
-; Uso: check_untyped_defs = True
-
-; show_error_codes:
-; Descripción: Muestra códigos de error en los mensajes de error.
-; Uso: show_error_codes = True
