--- a/.github/workflows/ci_v3.yaml
+++ b/.github/workflows/ci_v3.yaml
@@ -23,7 +23,8 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
-
+          
+      #custom_linter_v1      
       - name: Run custom linter
         run: |
           source venv/bin/activate
