--- a/.github/workflows/ci_v4.yaml
+++ b/.github/workflows/ci_v4.yaml
@@ -28,10 +28,11 @@ jobs:
           source venv/bin/activate
           pip install -r requirements.txt
 
+      #custom_linter_v1 
       - name: Run custom linter
         run: |
           source venv/bin/activate
-          python custom_linter.py my_app tests --max-line-length 88 --max-args 5
+          python custom_linter.py my_app tests --max-line-length 88 --max-args 1
 
       - name: Run tests
         run: |
