--- a/.github/workflows/ci-v5.yaml
+++ b/.github/workflows/ci-v5.yaml
@@ -4,10 +4,6 @@ on:
   push:
     branches:
       - main
-      - feature/**
-  pull_request:
-    branches:
-      - main
 
 jobs:
   lint:
@@ -28,6 +24,7 @@ jobs:
           source venv/bin/activate
           pip install -r requirements.txt
 
+      #custom_linter_v3
       - name: Run custom linters
         run: |
           source venv/bin/activate
